2008-12-01  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-blur-group.c:
	  Moved dimming code to where texture is rendered, so we make better
	  use of our 4bpp. Also means that changes in brightness are much
	  quicker to render.

2008-11-28  Jan Arne Petersen,Berlin  <jpetersen@openismus.com>

	* src/home/hd-home-dbus.xml: Also export the UngrapPointer method.

	* src/home/hd-home.c: grab_pointer is already called when the edit
	  menu is closed.

2008-11-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-dialog.c
	* src/util/hd-util.h
	* src/util/hd-util.c:
	  Moved the modal blocker window creation code to a common place.
	* src/mb/hd-note.h
	* src/mb/hd-note.c:
	  Create a modal blocker for information notes like HdDialog does
	  to close them when the user clicks outside the note.

2008-11-27  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/mb/hd-app-menu.[ch]: A HildonAppMenu is a menu, not a dialog.

2008-11-27  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/mb/hd-theme.c: Only non-leader app windows have back buttons.

2008-11-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-task-navigator.c:
	  Truncate the thumbnail titles.

2008-11-27  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        (some of this checkin was accidentally in the previous commit)

	* src/mb/hd-theme.c: Menus do not have back buttons, per Tuomas.

2008-11-27  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        Created X windows are named, for debugging.

	* src/home/hd-home.c:
	* src/mb/hd-dialog.c:

2008-11-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c:
	  hd_comp_mgr_effect(), hd_comp_mgr_unregister_client():
	  Handle clients which didn't map before leaving.
	  Fixes some CRITICALS caused by systemui.

2008-11-27  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-comp-mgr.c, src/home/hd-home.c,
	src/home/hd-task-navigator.c: Shorten animation durations for the
	managers.
